option('libmaf', type : 'boolean', value : false, description: 'build libmaf')
option('csharp', type : 'boolean', value : false, description: 'build csharp bindings')
option('avpipeline', type : 'boolean', value : false, description: 'build avpipeline plugin')
option('allinone', type : 'boolean', value : true, description: 'build libmaf, the c# wrapper, and media pipeline plugins in as a single library rtxrmaf')